@@ -1,3 +1,9 @@
+Sun Feb 17 20:45:10 2008  Tanaka Akira  <akr@fsij.org>
+
+	* re.c (rb_reg_prepare_re): add enable_warning parameter.
+	  (rb_reg_adjust_startpos): disable warning by rb_reg_prepare_re.
+	  (rb_reg_search): follow rb_reg_prepare_re parameter change.
+
 Sun Feb 17 20:12:41 2008  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* test/ruby/test_regexp.rb: add tests to achieve over 90% test
